--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   logger: ^1.1.0
   get: ^4.6.6
   cupertino_icons: ^1.0.8
+  camera: ^0.10.0+3
 
 dev_dependencies:
   flutter_test:
